# MBC

./: .replit  DATA_GOVERNANCE_DOCUMENTATION.md  DATA_UPLOAD_GUIDE.md  Dockerfile  FINAL_PROJECT_SUMMARY.md  PORTAL_QUICK_START.md  PROJECT_COMPLETION_SUMMARY.md  README.md  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
attached_assets/: ACCOUNT TYPE LOOKUP TABLE_1761019930935.xlsx  CCY LOOKUP TABLE_1761019930937.xlsx  IDC PRODUCT CODE LOOKUP TABLE_1761017177655.xlsx  Pasted-accounts-csv-ACNTS-ENTITY-NUM-ACNTS-INTERNAL-ACNUM-ACNTS-BRN-CODE-ACNTS-CLIENT-NUM-ACNTS-AC-SEQ-N-1761019865454_1761019865455.txt  Pasted-accounts-datadictionary-1761017422058-csv-ColumnName-DisplayName-Description-SuggestedDataType-Samp-1761018270516_1761018270516.txt  RBZ SECTOR CLASSIFICATION LOOKUP TABLE_1761019930934.csv  account_product_volume_1761020385323.csv  accounts_datadictionary_1761019930933.csv  cbvas_revenue_gls_2025-10-08T15_24_46.3659396+02_00_1761020385322.csv  gl_type_1761019930936.xlsx  products_type_1761017177655.xlsx
data/: .gitkeep  GL CATEGORY LOOKUP TABLE_1761019930934.csv  PRODUCT TYPE LOOKUP TABLE_1761019930935.csv  accounts_data.csv  churn_customers.csv
database/: init_db.py  schema.sql
docs/: 1_DEVELOPMENT_REPORT.md  2_ARCHITECTURE_DOCUMENTATION.md  3_TECHNICAL_SPECIFICATIONS.md  4_USER_MANUAL.md  5_BUSINESS_DEFINITIONS.md  6_STAKEHOLDER_MAPPING.md  7_FUTURE_ROADMAP.md
pages/: 0_Login.py  10_Marketing_Strategic_KPIs.py  11_Promotions_Analytics.py  12_Advertising_Performance.py  1_Executive_Summary.py  2_Active_Email_Accounts.py  3_Account_Activity.py  (+6 more)
(+9 files in other folders)
