[project]
name = "nmbi_bi
version = "1.1.0"
description = "Fully Featured Business Intelligence Portal for Marketing and Brand Communications"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
